--- a/code-solo.html
+++ b/code-solo.html
@@ -5,10 +5,13 @@
     <style>
         /* Wally the Wombat wants to update their profile - let's help them out. */
         /* 1. Change the color of the <h1> tag. Remember, the property to change the color of text is color and the value is the name of the color you want (or use a hex code!) */
-        
+        h1{
+            color: saddlebrown;
+        }
         
         /* 2. Using body as our selector, change the background-color to whatever color you want. */
         body {
+            background-color: burlywood;
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -17,7 +20,7 @@
             width: 80%;
             margin: 20px auto;
             padding: 20px;
-            border: 1px solid #ccc;
+            border: 10px solid saddlebrown;
         }
 
         /* This is a class selector - more on this next session! */
