--- a/code-along.html
+++ b/code-along.html
@@ -5,7 +5,9 @@
         <style>
 
             /* The images on this page are too big. Let me use CSS to resize them! Code along 😊 */
-
+            img{
+                width: 500px;
+            }
             /* 1. First, choose a selector. For this, I will use choose the img tag. */
             /* 2. Second, put curly braces. The code to change the size will be between the opening and closing curly brace. */
             /* 3. Third, put the property. What property should I use to change the size of the images? */
@@ -22,9 +24,9 @@
 
         <h1 class="sherman">Sherman's Shoe Store</h1>
         <div class="shoes">
-            <img src="https://i.s-madewell.com/is/image/madewell/A4552_WE7780?$pdp_fs418$">
-            <img src="https://media.kohlsimg.com/is/image/kohls/2958262_Black_White?wid=600&hei=600&op_sharpen=1">
-            <img src="https://n.nordstrommedia.com/id/sr3/2132b780-305c-4a85-857d-46a9dcde73dd.jpeg?crop=pad&pad_color=FFF&format=jpeg&trim=color&trimcolor=FFF&w=780&h=838">
+            <img src="https://m.media-amazon.com/images/I/71CGnkZRheL._AC_UY900_.jpg">
+            <img src="https://m.media-amazon.com/images/I/71l-HXuM+dL._AC_UY900_.jpg">
+            <img src="https://m.media-amazon.com/images/I/61ltcKD9W0L._AC_UY900_.jpg">
         </div>
         <h2 class="sherman">Shoes we sell:</h2>
         <ul>
