--- a/code-solo.html
+++ b/code-solo.html
@@ -6,12 +6,12 @@
         /* Wally the Wombat wants to update their profile - let's help them out. */
         /* 1. Change the color of the <h1> tag. Remember, the property to change the color of text is color and the value is the name of the color you want (or use a hex code!) */
         h1{
-            color: saddlebrown;
+            color: burlywood;
         }
         
         /* 2. Using body as our selector, change the background-color to whatever color you want. */
         body {
-            background-color: burlywood;
+            background-color: rgba(122, 87, 21, 0.671);
             font-family: Arial, sans-serif;
             text-align: center;
         }
@@ -20,16 +20,17 @@
             width: 80%;
             margin: 20px auto;
             padding: 20px;
-            border: 10px solid saddlebrown;
+            border: 10px solid burlywood;
         }
 
         /* This is a class selector - more on this next session! */
         .wombat-image {
             /* 3. Change the value of max-width to 400px. */
-            max-width: 300px;
+            max-width: 400px;
+            border: 7px solid burlywood;
             
             /* 4. Add a property called border-radius and set the value to 50%. What happens? */
-
+            border-radius: 50%;
 
         }
     </style>
